--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,7 +9,10 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab One</ion-title>
+      <ion-title size="small">
+        App Tittle is : {{appTitle}}
+        App Version is : {{appVersion}}
+      </ion-title>
     </ion-toolbar>
   </ion-header>
   <ng-container>
@@ -35,6 +38,9 @@
 
     <ion-button (click)="onGetPreferences()" expand="block" fill="solid" shape="round">
       Get Preferences
+    </ion-button>
+    <ion-button (click)="onDisplayNotification()" expand="block" fill="solid" shape="round">
+      Get Notifcation
     </ion-button>
   </ng-container>
 
