add firebase firestore

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -42,6 +42,8 @@
     <ion-button (click)="onDisplayNotification()" expand="block" fill="solid" shape="round">
       Get Notifcation
     </ion-button>
+
+    <p>{{appInstanceId}}</p>
   </ng-container>
 
 </ion-content>
