--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -15,11 +15,12 @@
 
 
   <ion-list>
-    <ion-item *ngFor="let item of items; let index">
+    <ion-item *ngFor="let item of collections$ | async; let index">
       <ion-avatar slot="start">
-        <img [src]="'https://picsum.photos/80/80?random=' + index" alt="avatar" />
+        <img [src]="item.imageUrl" alt="avatar" />
       </ion-avatar>
-      <ion-label>{{ item }}</ion-label>
+      <ion-label>{{ item.title }}</ion-label>
+      
     </ion-item>
   </ion-list>
   <ion-infinite-scroll (ionInfinite)="onIonInfinite($event)">
