--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -15,6 +15,11 @@
       <ion-icon aria-hidden="true" name="square"></ion-icon>
       <ion-label>Tab 3</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="tab4">
+      <ion-icon aria-hidden="true" name="notifications"></ion-icon>
+      <ion-label>Notifications</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
+  
 </ion-tabs>
